--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 baseurl: /my_page
 title: Satwik's Blog
-subtitle: My thoughts and stuff
-author: Satwik
+subtitle: Satwik's Blog
+author: satwik (orignally clay harmon)
 simple_search: http://google.com/search
 description: My ideas and thoughts
 name: tufte
